creando cart components

--- a/src/App.css
+++ b/src/App.css
@@ -797,7 +797,7 @@ footer .input-group-text {
 }
 
 .main-product-details {
-  padding: 20px;
+  padding: 30px 20px;
   background-color: white;
   border-radius: 10px;
 }
