generando mas componentes

--- a/src/App.css
+++ b/src/App.css
@@ -841,3 +841,80 @@ footer .input-group-text {
 }
 
 /* Main Product Page Ends Here */
+
+/* Cart Page */
+
+.cart-header,
+.cart-data {
+  border-bottom: 1px solid #eaeaea;
+}
+
+.cart-header h4 {
+  font-size: 13px;
+  color: var(--color-777777);
+}
+
+.cart-col-1 {
+  width: 40%;
+}
+
+.cart-col-1 p {
+  color: var(--color-777777);
+  font-size: 14px;
+}
+
+.cart-col-2 {
+  width: 10%;
+}
+
+.cart-col-3 {
+  width: 15%;
+}
+
+.cart-col-4 {
+  width: 15%;
+}
+
+.cart-data h5.price {
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+}
+
+.breadMargin {
+  background-color: var(--color-3b4149);
+}
+
+/* Cart Page Ends Here */
+
+/* Shipping Page  */
+
+.badge-item {
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-777777);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: absolute;
+  top: -10px;
+  right: -2px;
+}
+
+.badge-item h5 {
+  font-size: 12px;
+  margin: 0;
+  color: white;
+}
+
+.total {
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+}
+
+.total-price {
+  font-size: 16px;
+  color: var(--color-777777);
+}
+
+/* Shipping Page Ends Here */
